2008-01-03  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/Makefile.am:
	* docs/reference/gtksourceview2-ref.xml:
	* docs/reference/gtksourceview2-gtksourcestyle.xml: add new Style docs.

2008-01-03  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/Makefile.am:

2008-01-02  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.defs: remove the last bits of GtkSourceMarker stuff.

2008-01-01  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/Makefile.am:
	* docs/reference/gtksourceview2-ref.xml:
	* docs/reference/gtksourceview2-gtksourcebuffer.xml:
	* docs/reference/gtksourceview2-gtksourceview.xml:
	* docs/reference/gtksourceview2-gtksourcemarker.xml:
	* docs/reference/gtksourceview2-gtksourcelanguage.xml:
	* docs/reference/gtksourceview2-gtksourcestylescheme.xml:
	* docs/reference/gtksourceview2-gtksourcelanguagesmanager.xml: updated.

	* docs/reference/gtksourceview2-classes.xml:
	* docs/reference/gtksourceview2-gtksourceprintjob.xml: delete unsed.

2008-01-01  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.override: hide gslist_to_pylist_objs for now.

2008-01-01  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.defs:
	* gtksourceview2.override: remove GtkSourceMarker stuff.

2007-12-31  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.override: override-slot GtkSourceMarker.tp_new,
	prevents instances of gtksourceview2.Marker() to be created.

2007-12-31  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.defs: add gtk_source_language_get_style_ids and
	gtk_source_language_get_style_name.
	
	* gtksourceview2.override: wrap gtk_source_language_get_style_ids.

2007-12-30  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.override: override-slot GtkSourceStyleScheme.tp_new,
	prevents instances of gtksourceview2.StyleScheme() to be created.

2007-12-29  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview2.override: Add override-slot GtkSourceLanguage.tp_new,