@@ -13,7 +13,8 @@ XMLFILES = 							\
     reference/gtksourceview2-gtksourcelanguage.xml		\
     reference/gtksourceview2-gtksourcelanguagesmanager.xml	\
     reference/gtksourceview2-gtksourcestyle.xml			\
-    reference/gtksourceview2-gtksourcestylescheme.xml
+    reference/gtksourceview2-gtksourcestylescheme.xml		\
+    reference/gtksourceview2-gtksourcestyleschememanager.xml
 
 
 HTMLdir = $(datadir)/gtk-doc/html/pygtksourceview2
@@ -25,6 +26,7 @@ HTML_DATA =						\
 	html/class-gtksourcelanguagemanager2.html	\
 	html/class-gtksourcestyle2.html			\
 	html/class-gtksourcestylescheme2.html		\
+	html/class-gtksourcestyleschememanager2.html	\
 	html/class-gtksourceview2.html			\
 	html/pygtksourceview2.devhelp
 
